# Anno1800Skyscraper

./: .gitignore  2x2_out.csv  3x3_in.csv  GNUGPL  LICENSE  README.md  environment.yml  main.py  pyproject.toml  scr.py
anno1800skyscraper/: const.py  house.py  map.py  tests.py
layouts/2x2/: 2x2_in.csv  2x2_out.csv
layouts/2x2_mixed_mixed/: 2x2_mixed_mixedstart.ad  2x2_mixed_mixedstart_out.ad
layouts/2x5_IN/: 2x5_IN.ad  2x5_IN_out.ad
layouts/3x3/: 3x3_out.csv
layouts/3x3_IN/: 3x3_IN.ad  3x3_IN_out.ad
layouts/designer/: design.ad
layouts/example/: example_in.csv  example_out.csv
layouts/realistic/: realistic_mixed.ad  realistic_mixed_out.ad
layouts/simple/: simple.ad  simple_out.ad
utils/: figures.py  map.py
