[tool.poetry]
name = "anno1800skyscraper"
version = "0.1.1"
description = ""
authors = ["Pascal Sado <pascal.sado@fys.uio.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.2"
ipython = "^8.12.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
