[tool.poetry]
name = "anno1800skyscraper"
version = "0.1.1"
description = ""
authors = ["Pascal Sado <37416439+SadoP@users.noreply.github.com>"]
readme = "README.md"

include = [
    "anno1800skyscraper", "utils",
    "README.md", "LICENSE", "GNUGPL"
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.2"
ipython = "^8.12.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
black = "^23.11.0"
mypy = "^1.7.0"
tqdm-stubs = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_no_return = true
strict_optional = true
no_implicit_optional = true
disallow_any_generics = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_configs = true
show_traceback = true
exclude = [
    "\\.ini$", # files ending with ".ini",
    "\\.toml$", # or files ending with ".toml"
    "\\.lock$"  # or files ending with ".lock"
]

[tool.black]
line-length = 88
target-version = ['py312']