[project]
name = "anno1800skyscraper"
version = "0.1.2"
description = ""
authors = [{ name = "Pascal Sado", email = "<37416439+SadoP@users.noreply.github.com>" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.16.1,<2.0.0)",
    "types-tqdm (>=4.67.0.20250516,<5.0.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_no_return = true
strict_optional = true
no_implicit_optional = true
disallow_any_generics = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_configs = true
show_traceback = true
exclude = [
    "\\.ini$", # files ending with ".ini",
    "\\.toml$", # or files ending with ".toml"
    "\\.lock$"  # or files ending with ".lock"
]

[tool.black]
line-length = 88
target-version = ['py312']